--- a/.github/workflows/atualizar_painel.yml
+++ b/.github/workflows/atualizar_painel.yml
@@ -21,8 +21,10 @@ jobs:
         run: |
           pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib requests speedtest-cli holidays
 
-      - name: Run script
-        run: python get_clima_agenda.py
+       - name: Run script
+        run: |
+          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
+          python get_clima_agenda.py
 
       - name: Commit changes
         run: |
