--- a/.github/workflows/atualizar_painel.yml
+++ b/.github/workflows/atualizar_painel.yml
@@ -22,14 +22,5 @@ jobs:
           pip install google-api-python-client google-auth-httplib2 google-auth-oauthlib requests speedtest-cli holidays
 
       - name: Run script
-        run: |
-          echo "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
-          python get_clima_agenda.py
-
-      - name: Commit changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add index.html
-          git commit -m "Atualização automática do painel" || echo "Sem mudanças"
-          git push
+        env:
+          GOOGLE_CREDENTIALS: ${{ secrets_
