--- a/.github/workflows/atualizar_painel.yml
+++ b/.github/workflows/atualizar_painel.yml
@@ -23,4 +23,15 @@ jobs:
 
       - name: Run script
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets_
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: |
+          echo "$GOOGLE_CREDENTIALS" > credentials.json
+          python get_clima_agenda.py
+
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add index.html
+          git commit -m "Atualização automática do painel" || echo "Sem mudanças"
+          git push
